add MZR reports

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-11-04","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-12-19","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2022-11-04</h2>
+<h2 class="date">Updated 2022-12-19</h2>
 </div>
 </div>
 
@@ -92,7 +92,7 @@
 <div class = "last", id="bloc2">Wright</div>
 </div>
 <div id = "position", class = "position">
-Research Associate at Marzano Research and Clinical Supervisor at the University of Oregon Department of Communication Disorders and Sciences
+Researcher at Marzano Research and Clinical Supervisor at the University of Oregon Department of Communication Disorders and Sciences
 </div>
 <div id = "sub", class = "sub">
 Curriculum Vita
@@ -241,36 +241,41 @@ Wright</a>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">2022 — current</td>
-<td align="left"><span style="font-weight: 500">Research Associate</span>, Marzano Research</td>
-<td align="left">Support multiple aspects of research and evaluation projects designed to inform educational improvement through the provision of technical support and communication of findings</td>
+<td align="left">2023 — current</td>
+<td align="left"><span style="font-weight: 500">Researcher</span>, Marzano Research</td>
+<td align="left">Support and lead multiple aspects of research and evaluation studies and technical assistance projects via data collection, management, and analysis as well as meeting facilitation and report writing</td>
 </tr>
 <tr class="even">
+<td align="left">2022 — 2022</td>
+<td align="left"><span style="font-weight: 500">Rsearch Associate</span>, Marzano Research</td>
+<td align="left">Support multiple aspects of research and evaluation studies designed to inform educational improvement through the provision of technical support and communication of findings</td>
+</tr>
+<tr class="odd">
 <td align="left">2021 — current</td>
 <td align="left"><span style="font-weight: 500">Clinical Supervisor</span>, University of Oregon</td>
 <td align="left">Provide clinical supervision to Master’s students in the Communication Disorders and Sciences program, primarily for treatment sessions in the School-Age Clinic and the Brain Injury and Concussion Clinic</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2016 — 2017</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Amita Health Care: Alexian Brothers Medical Center – <em>Elk Grove Village, IL</em></td>
 <td align="left">Provided swallowing, speech, and language assessment and treatment in an acute care setting on a PRN basis</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2015 — 2017</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago Public Schools – <em>Chicago, IL</em></td>
 <td align="left">Provided direct and indirect speech and language services in the pre-K through grade 12 setting across a total of 4 schools</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2015 — 2016</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Education Solutions, LLC – <em>Chicago, IL</em></td>
 <td align="left">Provided direct speech and language therapy for students in private schools</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2014 — 2015</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago International Charter Schools – <em>Chicago, IL</em></td>
 <td align="left">Provided direct and indirect speech and language services to a caseload of 40 students across one elementary school and one high school</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2014 — 2014</td>
 <td align="left"><span style="font-weight: 500">Graduate Student Clinician</span>, Edward Hines, Jr. VA Hospital – <em>Hines, IL</em></td>
 <td align="left">Completed 10-week graduate student rotation where I obtained experience providing inpatient and outpatient speech therapy services to veterans</td>
@@ -478,6 +483,64 @@ Wright</a>
 <td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="professional-reports" class="section level2">
+<h2>Professional Reports</h2>
+<!-- <div class = "hangingindent prpa nohead"> -->
+<table>
+<colgroup>
+<col width="2%" />
+<col width="1%" />
+<col width="96%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2023</td>
+<td align="left">4.</td>
+<td align="left">Cherasaro, T., Rice, D., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; July-December 2022 biannual evaluation report 1. <em>Marzano Research</em>.</td>
+</tr>
+<tr class="even">
+<td align="left">2022</td>
+<td align="left">3.</td>
+<td align="left">Scott, C., Tedeschi, S., Wolfe, C., &amp; <span style="font-weight: 500">Wright, J.</span> (2022). Empowering Teachers as Researchers: Evaluation of Professional Development in South Carolina. <em>Marzano Research</em>.</td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">2.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span>, Hubach, S., &amp; Scott, C (2022). WY BILT Project: Year 2 annual report. <em>Marzano Research</em>.</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">1.</td>
+<td align="left">Cherasaro, T. &amp; <span style="font-weight: 500">Wright, J.</span> (2022). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; January-June 2022 biannual evaluation report 1. <em>Marzano Research</em>.</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
