fixed typo and year update

--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@ Wright</a>
 <td align="left">Support and lead multiple aspects of research and evaluation studies and technical assistance projects via data collection, management, and analysis as well as meeting facilitation and report writing</td>
 </tr>
 <tr class="even">
-<td align="left">2022 — 2022</td>
-<td align="left"><span style="font-weight: 500">Rsearch Associate</span>, Marzano Research</td>
+<td align="left">2022 — 2023</td>
+<td align="left"><span style="font-weight: 500">Research Associate</span>, Marzano Research</td>
 <td align="left">Support multiple aspects of research and evaluation studies designed to inform educational improvement through the provision of technical support and communication of findings</td>
 </tr>
 <tr class="odd">
