--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-12-19","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2023-01-06","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2022-12-19</h2>
+<h2 class="date">Updated 2023-01-06</h2>
 </div>
 </div>
 
@@ -524,28 +524,28 @@ Wright</a>
 <tbody>
 <tr class="odd">
 <td align="left">2023</td>
+<td align="left">5.</td>
+<td align="left">Scott, C., Wolfe, C., Rice, D., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Wyoming Accountability Part 1: An examination of the current system. <em>Marzano Research</em>.</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
 <td align="left">4.</td>
 <td align="left">Cherasaro, T., Rice, D., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; July-December 2022 biannual evaluation report 1. <em>Marzano Research</em>.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2022</td>
 <td align="left">3.</td>
 <td align="left">Scott, C., Tedeschi, S., Wolfe, C., &amp; <span style="font-weight: 500">Wright, J.</span> (2022). Empowering Teachers as Researchers: Evaluation of Professional Development in South Carolina. <em>Marzano Research</em>.</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left"></td>
 <td align="left">2.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span>, Hubach, S., &amp; Scott, C (2022). WY BILT Project: Year 2 annual report. <em>Marzano Research</em>.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left"></td>
 <td align="left">1.</td>
 <td align="left">Cherasaro, T. &amp; <span style="font-weight: 500">Wright, J.</span> (2022). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; January-June 2022 biannual evaluation report 1. <em>Marzano Research</em>.</td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
