added programming skills

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2023-02-04","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2023-04-18","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2023-02-04</h2>
+<h2 class="date">Updated 2023-04-18</h2>
 </div>
 </div>
 
@@ -418,6 +418,41 @@ Wright</a>
 <tr class="even">
 <td align="left">2017 — current</td>
 <td align="left"><span style="font-weight: 500">Picture Exchange Communication System Level 1</span>, Chicago Public Schools – Chicago, IL</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="programming-skills" class="section level2">
+<h2>Programming Skills</h2>
+<table>
+<colgroup>
+<col width="23%" />
+<col width="76%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2010 — current</td>
+<td align="left"><span style="font-weight: 500">Microsoft Office</span></td>
+</tr>
+<tr class="even">
+<td align="left">2017 — current</td>
+<td align="left"><span style="font-weight: 500">SPSS</span></td>
+</tr>
+<tr class="odd">
+<td align="left">2018 — current</td>
+<td align="left"><span style="font-weight: 500">Qualtrics</span></td>
+</tr>
+<tr class="even">
+<td align="left">2019 — current</td>
+<td align="left"><span style="font-weight: 500">R and Rstudio</span></td>
+</tr>
+<tr class="odd">
+<td align="left">2022 — current</td>
+<td align="left"><span style="font-weight: 500">MAXQDA</span></td>
+</tr>
+<tr class="even">
+<td align="left">2023 — current</td>
+<td align="left"><span style="font-weight: 500">Tableau</span></td>
 </tr>
 </tbody>
 </table>
