MZR report updates

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2023-04-18","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
+{"date":"Updated 2023-10-25","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
 
 
-<script src="index_files/paged-0.19/js/config.js"></script>
-<script src="index_files/paged-0.19/js/paged.js"></script>
-<script src="index_files/paged-0.19/js/hooks.js"></script>
+<script src="index_files/paged-0.20/js/config.js"></script>
+<script src="index_files/paged-0.20/js/paged.js"></script>
+<script src="index_files/paged-0.20/js/hooks.js"></script>
 
 
 
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2023-04-18</h2>
+<h2 class="date">Updated 2023-10-25</h2>
 </div>
 </div>
 
@@ -140,9 +140,8 @@ right
 </tr>
 <tr class="even">
 <td align="left">
-<span style="color: #454545"><i class="fas fa-envelope"></i></span> <a
-href="mailto:jim.wright@marzanoresearch.com"
-class="email">jim.wright@marzanoresearch.com</a>
+<span style="color: #454545"><i class="fas fa-envelope"></i></span>
+<a href="mailto:jim.wright@marzanoresearch.com" class="email">jim.wright@marzanoresearch.com</a>
 </td>
 <td align="right">
 </td>
@@ -559,6 +558,16 @@ Wright</a>
 <tbody>
 <tr class="odd">
 <td align="left">2023</td>
+<td align="left">7.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span>, Rosario, E., Schwartzbard, R., &amp; Scott, C (2023). WY BILT project: Year 3 annual report. <em>Marzano Research</em>.</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">6.</td>
+<td align="left">Cherasaro, T., Keough, S., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; Final evaluation report. <em>Marzano Research</em>.</td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
 <td align="left">5.</td>
 <td align="left">Scott, C., Wolfe, C., Rice, D., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Wyoming Accountability Part 1: An examination of the current system. <em>Marzano Research</em>.</td>
 </tr>
@@ -581,16 +590,6 @@ Wright</a>
 <td align="left"></td>
 <td align="left">1.</td>
 <td align="left">Cherasaro, T. &amp; <span style="font-weight: 500">Wright, J.</span> (2022). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; January-June 2022 biannual evaluation report 1. <em>Marzano Research</em>.</td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
