project experience added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"date":"Updated 2023-10-25","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
+{"date":"Updated 2023-11-02","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2023-10-25</h2>
+<h2 class="date">Updated 2023-11-02</h2>
 </div>
 </div>
 
@@ -281,7 +281,67 @@ Wright</a>
 </tr>
 </tbody>
 </table>
-<p>A specific example of the work I complete for Marzano Research is the development of a data dashboard for Kamehameha Schools in the State of Hawaii. The dashboard is accessible <a href="https://marzanoresearch.shinyapps.io/ks_version4/?_ga=2.111201984.530676107.1666295282-750961707.1634592294">here</a>.</p>
+</div>
+<div id="selected-project-experience" class="section level2">
+<h2>Selected Project Experience</h2>
+<table>
+<colgroup>
+<col width="2%" />
+<col width="20%" />
+<col width="9%" />
+<col width="67%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2023 — current</td>
+<td align="left"><span style="font-weight: 500">Brookings, SD School District Special Education Program Review</span>, Marzano Research</td>
+<td align="left">Project Lead</td>
+<td align="left">Prepared scope of work that secured $82,500 contract to review the Brookings, South Dakota school district’s special education programming with a specific emphasis on evaluating staffing needs and environmental conditions that facilitate negative and troublesome behaviors.</td>
+</tr>
+<tr class="even">
+<td align="left">2023 — current</td>
+<td align="left"><a href="https://marzanoresearch.shinyapps.io/all_districts/"><span style="font-weight: 500">Success Ready Students Missouri – Learner Centered Assessments</span>, Marzano Research</a></td>
+<td align="left">Data analysis</td>
+<td align="left">Responsible for data wrangling and analysis of district state assessment and interim assessments to compare proficiency ratings between the type of assessment. A primary responsibility has been the development of a dashboard to communicate test results and effect size comparisons.</td>
+</tr>
+<tr class="odd">
+<td align="left">2022 — current</td>
+<td align="left"><span style="font-weight: 500">Wyoming Accountability Study</span>, Marzano Research</td>
+<td align="left">Data analysis</td>
+<td align="left">Responsible for data collection and analysis through survey administration and focus group facilitation. Also supported the identification of positive outlier schools through analysis of school proficiency ratings.</td>
+</tr>
+<tr class="even">
+<td align="left">2022 — current</td>
+<td align="left"><span style="font-weight: 500">Wyoming Building in Literacy Together (WYBILT)</span>, Marzano Research</td>
+<td align="left">Project Lead</td>
+<td align="left">Leads the WYBILT project, a series of comprehensive literacy state development grants in 25 Wyoming school districts. Responsible for consultation with the Wyoming Department of Education, overseeing data collection, analysis, and communication of findings.</td>
+</tr>
+<tr class="odd">
+<td align="left">2022 — current</td>
+<td align="left"><a href="https://marzanoresearch.shinyapps.io/ks_version4/"><span style="font-weight: 500">’Imi Pono Hawai’i Wellbeing Survey</span>, Marzano Research</a></td>
+<td align="left">Data analysis</td>
+<td align="left">Responsible for survey development and analysis of the annual ’Imi Pono Hawai’i Wellbeing Survey. Primary role includes the development of a dashboard to communicate findings.</td>
+</tr>
+<tr class="even">
+<td align="left">2022 — current</td>
+<td align="left"><span style="font-weight: 500">South Carolina Teacher as Researcher</span>, Marzano Research</td>
+<td align="left">Professional development facilitator and data analysis</td>
+<td align="left">Responsible for providing professional development sessions as a methodologist to assist participating teachers design and implement research studies within their classrooms. As a data analyst, responsible for the evaluation of exit survey data to inform and influence improvements to the professional learning series.</td>
+</tr>
+<tr class="odd">
+<td align="left">2022 — 2023</td>
+<td align="left"><span style="font-weight: 500">Wyoming Digital Learning Plan</span>, Marzano Research</td>
+<td align="left">Project Lead</td>
+<td align="left">Responsible for consulting with the Wyoming Department of Education to draft and finalize the 2023-2028 digital learning plan. Project activities included a landscape scan of national research on digital learning, data collection (e.g., focus groups, surveys), and facilitating the drafting and finalization of the plan with an advisory panel, consisting of stakeholders across the state of Wyoming.</td>
+</tr>
+<tr class="even">
+<td align="left">2022 — 2023</td>
+<td align="left"><span style="font-weight: 500">Evaluation of South Dakota’s Rethink Education Model Grant</span>, Marzano Research</td>
+<td align="left">Data analysis</td>
+<td align="left">Responsible for data collection and analysis of program activities including survey administration and focus group facilitation.</td>
+</tr>
+</tbody>
+</table>
 </div>
 <div id="graduate-student-research-experience" class="section level2">
 <h2>Graduate Student Research Experience</h2>
