--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ Wright</a>
 </tr>
 <tr class="even">
 <td align="left">2022 — current</td>
-<td align="left"><span style="font-weight: 500">Wyoming Building in Literacy Together (WYBILT)</span>, Marzano Research</td>
+<td align="left"><span style="font-weight: 500">Wyoming Believing in Literacy Together (WY BILT)</span>, Marzano Research</td>
 <td align="left">Project Lead</td>
 <td align="left">Leads the WYBILT project, a series of comprehensive literacy state development grants in 25 Wyoming school districts. Responsible for consultation with the Wyoming Department of Education, overseeing data collection, analysis, and communication of findings.</td>
 </tr>
