linked more dashboards

--- a/index.html
+++ b/index.html
@@ -306,13 +306,13 @@ Wright</a>
 </tr>
 <tr class="odd">
 <td align="left">2022 — current</td>
-<td align="left"><span style="font-weight: 500">Wyoming Accountability Study</span>, Marzano Research</td>
+<td align="left"><a href="https://marzanoresearch.shinyapps.io/wy_act_school_movement/"><span style="font-weight: 500">Wyoming Accountability Study</span>, Marzano Research</a></td>
 <td align="left">Data analysis</td>
 <td align="left">Responsible for data collection and analysis through survey administration and focus group facilitation. Also supported the identification of positive outlier schools through analysis of school proficiency ratings.</td>
 </tr>
 <tr class="even">
 <td align="left">2022 — current</td>
-<td align="left"><span style="font-weight: 500">Wyoming Believing in Literacy Together (WY BILT)</span>, Marzano Research</td>
+<td align="left"><a href="https://marzanoresearch.shinyapps.io/wy_bilt_v2/"><span style="font-weight: 500">Wyoming Believing in Literacy Together (WY BILT)</span>, Marzano Research</a></td>
 <td align="left">Project Lead</td>
 <td align="left">Leads the WYBILT project, a series of comprehensive literacy state development grants in 25 Wyoming school districts. Responsible for consultation with the Wyoming Department of Education, overseeing data collection, analysis, and communication of findings.</td>
 </tr>
@@ -324,9 +324,9 @@ Wright</a>
 </tr>
 <tr class="even">
 <td align="left">2022 — current</td>
-<td align="left"><span style="font-weight: 500">South Carolina Teacher as Researcher</span>, Marzano Research</td>
+<td align="left"><a href="https://marzanoresearch.shinyapps.io/cohort1_exit_survey/"><span style="font-weight: 500">South Carolina Teacher as Researcher</span>, Marzano Research</a></td>
 <td align="left">Professional development facilitator and data analysis</td>
-<td align="left">Responsible for providing professional development sessions as a methodologist to assist participating teachers design and implement research studies within their classrooms. As a data analyst, responsible for the evaluation of exit survey data to inform and influence improvements to the professional learning series.</td>
+<td align="left">Responsible for providing professional development sessions as a methodologist to assist participating teachers design and implement research studies within their classrooms. As a data analyst, responsible for the evaluation and communication of exit survey data to inform and influence improvements to the professional learning series.</td>
 </tr>
 <tr class="odd">
 <td align="left">2022 — 2023</td>
