--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"date":"Updated 2023-11-15","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
+{"date":"Updated 2024-01-31","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2023-11-15</h2>
+<h2 class="date">Updated 2024-01-31</h2>
 </div>
 </div>
 
@@ -69,13 +69,9 @@
       <i class="fas fafooter fa-envelope"> | </i>
   </a>  
   
-   <a href="mailto:jim.wright@marzanoresearch.com" class="icon-block">
+   <a href="mailto:jim@appliedsurveyresearch.org" class="icon-block">
       <i class="fas fafooter fa-envelope"> | </i>
   </a>  
-  
-  <a href="mailto:jwrigh16@uoregon.edu" class="icon-block">
-      <i class="fas fafooter fa-envelope"> | </i>
-  </a> 
   
   <a href="https://www.linkedin.com/in/jim-wright-a944698b/" class="icon-block">
       <i class="fab fafooter fa-linkedin"></i>
@@ -92,7 +88,7 @@
 <div class = "last", id="bloc2">Wright</div>
 </div>
 <div id = "position", class = "position">
-Researcher at Marzano Research and Clinical Supervisor at the University of Oregon Department of Communication Disorders and Sciences
+Senior Research Analyst at Applied Survey Research
 </div>
 <div id = "sub", class = "sub">
 Curriculum Vita
@@ -141,20 +137,12 @@ right
 <tr class="even">
 <td align="left">
 <span style="color: #454545"><i class="fas fa-envelope"></i></span>
-<a href="mailto:jim.wright@marzanoresearch.com" class="email">jim.wright@marzanoresearch.com</a>
+<a href="mailto:jim@appliedsurveyresearch.org" class="email">jim@appliedsurveyresearch.org</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="odd">
-<td align="left">
-<span style="color: #454545"><i class="fas fa-envelope"></i></span>
-<a href="mailto:jwrigh16@uoregon.edu" class="email">jwrigh16@uoregon.edu</a>
-</td>
-<td align="right">
-</td>
-</tr>
-<tr class="even">
 <td align="left">
 <span style="color: #454545"><i class="fab fa-github"></i></span> <a
 href="https://github.com/Jim-Wright90">Jim-Wright90</a>
@@ -162,7 +150,7 @@ href="https://github.com/Jim-Wright90">Jim-Wright90</a>
 <td align="right">
 </td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">
 <span style="color: #454545"><i class="fab fa-linkedin"></i></span> <a
 href="https://www.linkedin.com/in/jim-wright-a944698b/">Jim
@@ -171,7 +159,7 @@ Wright</a>
 <td align="right">
 </td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">
 <span style="color: #454545"><i class="fab fa-orcid"></i></span> <a
 href="https://orcid.org/my-orcid?orcid=0000-0003-3035-7003">Jim
@@ -229,7 +217,7 @@ Wright</a>
 <colgroup>
 <col width="4%" />
 <col width="39%" />
-<col width="55%" />
+<col width="56%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -240,41 +228,46 @@ Wright</a>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">2023 — current</td>
-<td align="left"><span style="font-weight: 500">Researcher</span>, Marzano Research</td>
-<td align="left">Support and lead multiple aspects of research and evaluation studies and technical assistance projects via data collection, management, and analysis as well as meeting facilitation and report writing</td>
+<td align="left">2024 — current</td>
+<td align="left"><span style="font-weight: 500">Senior Research Analyst</span>, Applied Survey Research</td>
+<td align="left">Assist in the design and implementation of community-based research, evaluation, assessment, and strategic planning projects via survey development, data cleaning, data analysis and report writing</td>
 </tr>
 <tr class="even">
-<td align="left">2021 — current</td>
+<td align="left">2023 — 2024</td>
+<td align="left"><span style="font-weight: 500">Researcher</span>, Marzano Research</td>
+<td align="left">Support and lead multiple aspects of education research and evaluation studies and technical assistance projects via data collection, management, and analysis as well as meeting facilitation and report writing</td>
+</tr>
+<tr class="odd">
+<td align="left">2021 — 2023</td>
 <td align="left"><span style="font-weight: 500">Clinical Supervisor</span>, University of Oregon</td>
 <td align="left">Provide clinical supervision to Master’s students in the Communication Disorders and Sciences program, primarily for treatment sessions in the School-Age Clinic and the Brain Injury and Concussion Clinic</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2022 — 2023</td>
 <td align="left"><span style="font-weight: 500">Research Associate</span>, Marzano Research</td>
-<td align="left">Support multiple aspects of research and evaluation studies designed to inform educational improvement through the provision of technical support and communication of findings</td>
+<td align="left">Support multiple aspects of education research and evaluation studies designed to inform educational improvement through the provision of technical support and communication of findings</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2016 — 2017</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Amita Health Care: Alexian Brothers Medical Center – <em>Elk Grove Village, IL</em></td>
 <td align="left">Provided swallowing, speech, and language assessment and treatment in an acute care setting on a PRN basis</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2015 — 2017</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago Public Schools – <em>Chicago, IL</em></td>
 <td align="left">Provided direct and indirect speech and language services in the pre-K through grade 12 setting across a total of 4 schools</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2015 — 2016</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Education Solutions, LLC – <em>Chicago, IL</em></td>
 <td align="left">Provided direct speech and language therapy for students in private schools</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2014 — 2015</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago International Charter Schools – <em>Chicago, IL</em></td>
 <td align="left">Provided direct and indirect speech and language services to a caseload of 40 students across one elementary school and one high school</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2014 — 2014</td>
 <td align="left"><span style="font-weight: 500">Graduate Student Clinician</span>, Edward Hines, Jr. VA Hospital – <em>Hines, IL</em></td>
 <td align="left">Completed 10-week graduate student rotation where I obtained experience providing inpatient and outpatient speech therapy services to veterans</td>
