project dates update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"date":"Updated 2024-01-31","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
+{"date":"Updated 2024-02-02","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2024-01-31</h2>
+<h2 class="date">Updated 2024-02-02</h2>
 </div>
 </div>
 
@@ -286,46 +286,46 @@ Wright</a>
 </colgroup>
 <tbody>
 <tr class="odd">
-<td align="left">2023 — current</td>
+<td align="left">2023 — 2024</td>
 <td align="left"><span style="font-weight: 500">Rapid City, SD Area Schools Special Education Program Review</span>, Marzano Research</td>
 <td align="left">Project Lead</td>
 <td align="left">Prepared scope of work that secured $95,000 contract to review the Rapid City, South Dakota Area Schools’ special education program with a specific emphasis on service compliance, staffing needs, and eligibility determination.</td>
 </tr>
 <tr class="even">
-<td align="left">2023 — current</td>
+<td align="left">2023 — 2024</td>
 <td align="left"><span style="font-weight: 500">Brookings, SD School District Special Education Program Review</span>, Marzano Research</td>
 <td align="left">Project Lead</td>
 <td align="left">Prepared scope of work that secured $82,500 contract to review the Brookings, South Dakota school district’s special education programming with a specific emphasis on evaluating staffing needs and environmental conditions that facilitate negative and troublesome behaviors.</td>
 </tr>
 <tr class="odd">
-<td align="left">2023 — current</td>
+<td align="left">2023 — 2024</td>
 <td align="left"><a href="https://marzanoresearch.shinyapps.io/all_districts/"><span style="font-weight: 500">Success Ready Students Missouri – Learner Centered Assessments</span>, Marzano Research</a></td>
 <td align="left">Data analysis</td>
 <td align="left">Responsible for data wrangling and analysis of district state assessment and interim assessments to compare proficiency ratings between the type of assessment. A primary responsibility has been the development of a dashboard to communicate test results and effect size comparisons.</td>
 </tr>
 <tr class="even">
-<td align="left">2022 — current</td>
-<td align="left"><a href="https://marzanoresearch.shinyapps.io/wy_act_school_movement/"><span style="font-weight: 500">Wyoming Accountability Study</span>, Marzano Research</a></td>
-<td align="left">Data analysis</td>
-<td align="left">Responsible for data collection and analysis through survey administration and focus group facilitation. Also supported the identification of positive outlier schools through analysis of school proficiency ratings.</td>
-</tr>
-<tr class="odd">
-<td align="left">2022 — current</td>
+<td align="left">2022 — 2024</td>
 <td align="left"><a href="https://marzanoresearch.shinyapps.io/wy_bilt_v2/"><span style="font-weight: 500">Wyoming Believing in Literacy Together (WY BILT)</span>, Marzano Research</a></td>
 <td align="left">Project Lead</td>
 <td align="left">Leads the WYBILT project, a series of comprehensive literacy state development grants in 25 Wyoming school districts. Responsible for consultation with the Wyoming Department of Education, overseeing data collection, analysis, and communication of findings.</td>
 </tr>
-<tr class="even">
-<td align="left">2022 — current</td>
+<tr class="odd">
+<td align="left">2022 — 2024</td>
 <td align="left"><a href="https://marzanoresearch.shinyapps.io/ks_version4/"><span style="font-weight: 500">’Imi Pono Hawai’i Wellbeing Survey</span>, Marzano Research</a></td>
 <td align="left">Data analysis</td>
 <td align="left">Responsible for survey development and analysis of the annual ’Imi Pono Hawai’i Wellbeing Survey. Primary role includes the development of a dashboard to communicate findings.</td>
 </tr>
-<tr class="odd">
-<td align="left">2022 — current</td>
+<tr class="even">
+<td align="left">2022 — 2024</td>
 <td align="left"><a href="https://marzanoresearch.shinyapps.io/cohort1_exit_survey/"><span style="font-weight: 500">South Carolina Teacher as Researcher</span>, Marzano Research</a></td>
 <td align="left">Professional development facilitator and data analysis</td>
 <td align="left">Responsible for providing professional development sessions as a methodologist to assist participating teachers design and implement research studies within their classrooms. As a data analyst, responsible for the evaluation and communication of exit survey data to inform and influence improvements to the professional learning series.</td>
+</tr>
+<tr class="odd">
+<td align="left">2022 — 2023</td>
+<td align="left"><a href="https://marzanoresearch.shinyapps.io/wy_act_school_movement/"><span style="font-weight: 500">Wyoming Accountability Study</span>, Marzano Research</a></td>
+<td align="left">Data analysis</td>
+<td align="left">Responsible for data collection and analysis through survey administration and focus group facilitation. Also supported the identification of positive outlier schools through analysis of school proficiency ratings.</td>
 </tr>
 <tr class="even">
 <td align="left">2022 — 2023</td>
