Summer 2024 Updates with CBIRT presentation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"date":"Updated 2024-02-02","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
+{"date":"Updated 2024-09-06","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2024-02-02</h2>
+<h2 class="date">Updated 2024-09-06</h2>
 </div>
 </div>
 
@@ -664,39 +664,39 @@ Wright</a>
 </colgroup>
 <tbody>
 <tr class="odd">
+<td align="left">2024</td>
+<td align="left">7.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> (2024, May). <em>Multidisciplinary Coordination and Communication to Guide Concussion Recovery</em>. Paper presented at the Center on Brain Injury Research and Training,Webinar.</td>
+</tr>
+<tr class="even">
 <td align="left">2022</td>
 <td align="left">6.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> (2022, October). <em>Translating Executive Functioning Challenges into Treatment Implementation to Support Return-to-Learn in the mTBI Population</em>. Paper presented at the Center on Brain Injury Research and Training,Webinar.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2020</td>
 <td align="left">5.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2020, March). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the Center on Brain Injury Research and Training,Webinar.</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left"></td>
 <td align="left">4.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2020, March). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Prolonged Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the University of Oregon Department of Communication Disorders and Sciences Continuing Education Opportunity Event, Eugene, OR.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2019</td>
 <td align="left">3.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2019, November). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Persistent Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the American Speech-Language Hearing Association National Conference, Orlando, FL.</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left"></td>
 <td align="left">2.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2019, October). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the annual meeting of the Oregon Speech-Language Hearing Association State Conference, Salem, OR.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2014</td>
 <td align="left">1.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Loucks, T (2014, February). <em>Adaptation under Altered Auditory Feedback</em>. Poster presented at the annual meeting of the Illinois Speech-Language-Hearing Association, Rosemont, IL.</td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
 </tr>
 </tbody>
 </table>
