--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"date":"Updated 2024-09-06","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
+{"date":"Updated 2024-09-19","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2024-09-06</h2>
+<h2 class="date">Updated 2024-09-19</h2>
 </div>
 </div>
 
@@ -610,45 +610,45 @@ Wright</a>
 <!-- <div class = "hangingindent prpa nohead"> -->
 <table>
 <colgroup>
-<col width="2%" />
+<col width="1%" />
 <col width="1%" />
 <col width="96%" />
 </colgroup>
 <tbody>
 <tr class="odd">
-<td align="left">2023</td>
+<td align="left"></td>
+<td align="left">11.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span>, Usacheva, M., &amp; Flamenco, A (2024). Youth Suicide Prevention Gap Analysis - Prepared for the Sacramento County Department of Health Services, Division of Behavioral Health Services. <em>Applied Survey Research</em>.</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">10.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Colvig-Niclai, L (2024). Developmental Screening Gap Asessment - Prepared for First 5 Kern County. <em>Applied Survey Research</em>.</td>
+</tr>
+<tr class="odd">
+<td align="left">2024</td>
+<td align="left">9.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Brutschy, S (2024). Universal Pre-Kindergarten and Mixed Delivery Survey: Spring 2024 - Prepared for the Santa Cruz County Office of Education. <em>Applied Survey Research</em>.</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">8.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Colvig-Niclai, L (2024). Universal Pre-Kindergarten and Mixed Delivery Survey: Spring 2024 - Prepared for the Butte County Office of Education. <em>Applied Survey Research</em>.</td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
 <td align="left">7.</td>
-<td align="left"><span style="font-weight: 500">Wright, J.</span>, Rosario, E., Schwartzbard, R., &amp; Scott, C (2023). WY BILT project: Year 3 annual report. <em>Marzano Research</em>.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span>, Rosario, E., Schwartzbard, R., &amp; Scott, C (2023). WY BILT project: Year 3 annual report - Prepared for the Wyoming Department of Education. <em>Marzano Research</em>.</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">6.</td>
-<td align="left">Cherasaro, T., Keough, S., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; Final evaluation report. <em>Marzano Research</em>.</td>
+<td align="left">Cherasaro, T., Keough, S., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; Final evaluation report - Prepared for the South Dakota Department of Education. <em>Marzano Research</em>.</td>
 </tr>
 <tr class="odd">
-<td align="left"></td>
+<td align="left">2023</td>
 <td align="left">5.</td>
-<td align="left">Scott, C., Wolfe, C., Rice, D., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Wyoming Accountability Part 1: An examination of the current system. <em>Marzano Research</em>.</td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left">4.</td>
-<td align="left">Cherasaro, T., Rice, D., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; July-December 2022 biannual evaluation report 1. <em>Marzano Research</em>.</td>
-</tr>
-<tr class="odd">
-<td align="left">2022</td>
-<td align="left">3.</td>
-<td align="left">Scott, C., Tedeschi, S., Wolfe, C., &amp; <span style="font-weight: 500">Wright, J.</span> (2022). Empowering Teachers as Researchers: Evaluation of Professional Development in South Carolina. <em>Marzano Research</em>.</td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left">2.</td>
-<td align="left"><span style="font-weight: 500">Wright, J.</span>, Hubach, S., &amp; Scott, C (2022). WY BILT Project: Year 2 annual report. <em>Marzano Research</em>.</td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">1.</td>
-<td align="left">Cherasaro, T. &amp; <span style="font-weight: 500">Wright, J.</span> (2022). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; January-June 2022 biannual evaluation report 1. <em>Marzano Research</em>.</td>
+<td align="left">Scott, C., Wolfe, C., Rice, D., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Wyoming Accountability Part 1: An examination of the current system - Prepared for the Wyoming Department of Education. <em>Marzano Research</em>.</td>
 </tr>
 </tbody>
 </table>
